# Boids

./: .gitignore  Cargo.toml  README.md  build.rs
src/: boid.rs  main.rs  math.rs
